kuber-cfgs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellosayer
  labels:
    app: hellosayer
spec:
  replicas: 5
  selector:
    matchLabels:
      app: hellosayer
  template:
    metadata:
      labels:
        app: hellosayer
    spec:
      containers:
      - name: hellosayer
        image: kurles/hellosayer:latest
        livenessProbe:
          httpGet:
            path: /live
            port: 8080       
          initialDelaySeconds: 3
          periodSeconds: 3     
        ports:
        - containerPort: 8080
        resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telebot
  labels:
    app: telebot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telebot
  template:
    metadata:
      labels:
        app: telebot
    spec:
      containers:
      - name: telebot
        image: kurles/telebot:latest
        ports:
        - containerPort: 8080   
        livenessProbe:
          httpGet:
            path: /live
            port: 8080       
          initialDelaySeconds: 3
          periodSeconds: 3     
        resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: v1
kind: Service
metadata:
  name: telebot  
spec:
  type: NodePort
  selector:
    app: telebot
  ports:
  - port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: hellosayer
spec:
  type: ClusterIP
  selector:
    app: hellosayer
  ports:
  - port: 8080
    targetPort: 8080
