kuber-cfgs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: helloer.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: telebot
                port:
                  number: 8080
